fix close button on mobile

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ nav ul a:hover{
 
 #btn-close{
     display: none;
+    position: absolute;
+    right: 2rem;
+    top: 5rem;
 }
 
 .btn-menu{
